(fix) Change styling so that canvas does not overflow

--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -5,17 +5,14 @@
 @import "styles/loginSignup";
 @import "styles/header";
 @import "styles/leaderboard";
-@import "styles/welcome";
 @import "styles/chat";
 @import "styles/challenges";
+@import "styles/welcome";
 
 body {
     font-family: 'Raleway-regular', sans-serif;
 }
-.shorty {
-    height: 50%;
-    overflow: hidden;
-}
+
 .challengeEditor {
     width: 100%;
     height: 100%;
@@ -31,9 +28,6 @@ body {
     float: right;
 }
 
-div.chat-section {
-    width: 100%;
-}
 .message-section {
     max-height: 40%;
 }
